Fix width issue on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 #root {
-  max-width: 400px;
+  max-width: 500px;
   margin: 0 auto;
   padding-top: 2rem;
   text-align: left;
